--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "ui": "*"
   },
   "devDependencies": {
@@ -23,8 +24,8 @@
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "postcss": "^8.4.21",
+    "tailwind-config": "*",
     "tailwindcss": "^3.2.7",
-    "tailwind-config":"*", 
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
