--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,12 +12,15 @@
     "@chakra-ui/react": "^2.5.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.0.0",
     "framer-motion": "^10.8.4",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
-    "ui": "*"
+    "ui": "*",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
