--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.0",
     "framer-motion": "^10.8.4",
+    "i18next": "^22.4.14",
     "next": "^13.1.1",
+    "next-i18next": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.2.0",
     "react-query": "^3.39.3",
     "ui": "*",
     "zod": "^3.21.4"
@@ -30,6 +33,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
+    "next-i18next-config": "*",
     "postcss": "^8.4.21",
     "tailwind-config": "*",
     "tailwindcss": "^3.2.7",
