--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.0",
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.29.0",
     "framer-motion": "^10.8.4",
     "i18next": "^22.4.14",
     "next": "^13.1.1",
@@ -21,7 +23,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.0",
-    "react-query": "^3.39.3",
     "ui": "*",
     "zod": "^3.21.4"
   },
