--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,9 +20,11 @@
     "next": "^13.1.1",
     "next-i18next": "^13.2.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.0",
+    "react-icons": "^4.8.0",
     "ui": "*",
     "zod": "^3.21.4"
   },
