--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/react-datepicker": "^4.10.0",
     "autoprefixer": "^10.4.14",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
