--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:lighthouse": "yarn run build && lhci autorun"
   },
   "dependencies": {
     "next": "^13.1.1",
@@ -16,6 +17,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@lhci/cli": "^0.12.0",
+    "@lhci/server": "^0.12.0",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
