--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
+        working-directory: apps/docs
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-args: --yes
