--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,15 @@ jobs:
       - name: Build App
         working-directory: apps/docs
         run: yarn workspace docs run build
-
+          
       - name: Deploy apps/docs to Vercel
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-args: --yes --prod --include=apps/docs/**
+          vercel-args: --prod --yes
+          run: |
+            cd apps/docs/
+            vercel
 
       - name: Wait for Deployment
         run: |
