--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 3001",
-    "build": "next build",
+    "build": "yarn workspace docs run build",
     "start": "next start",
     "lint": "next lint",
     "test:lighthouse": "yarn run build && lhci autorun"
