Fix-14: Deployement workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
-      - name: Build App
+      - name: Build App -- But do you we need to build here?
         working-directory: apps/docs
         run: yarn workspace docs run build
 
