--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           cd apps/docs 
           npm install -g @lhci/cli@0.11.x
-          lhci autorun --config apps/docs/lighthouserc.js
+          lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
